load("//build/bazel_common_rules/dist:dist.bzl", "copy_to_dist_dir")
load("//build/kernel/kleaf:kernel.bzl", "kernel_build", "kernel_images", "kernel_modules_install")
load("//common:modules.bzl", "get_gki_modules_list")
load("//build/kernel/kleaf:common_kernels.bzl", "define_common_kernels")

_RGXX3_MODULE_OUTS = [
    "sound/soc/generic/snd-soc-simple-card-utils.ko",
    "drivers/input/misc/pwm-vibra.ko",
    "drivers/gpu/drm/panel/panel-newvision-nv3051d.ko",
    "drivers/char/hw_random/optee-rng.ko",
    "drivers/cpufreq/cpufreq-dt.ko",
#    "drivers/net/wireless/realtek/rtw88/rtw88_8821c.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi.ko",
    "drivers/tee/optee/optee.ko",
    "drivers/input/keyboard/adc-keys.ko",
    "drivers/gpu/drm/display/drm_display_helper.ko",
    "drivers/phy/rockchip/phy-rockchip-inno-usb2.ko",
    "sound/soc/rockchip/snd-soc-rockchip-pdm.ko",
    "drivers/mmc/core/pwrseq_simple.ko",
    "drivers/bluetooth/btrtl.ko",
    "drivers/spi/spi-rockchip.ko",
#    "drivers/net/wireless/realtek/rtw88/rtw88_core.ko",
    "drivers/clk/clk-scmi.ko",
    "sound/soc/generic/snd-soc-audio-graph-card2.ko",
    "drivers/gpu/drm/panel/panel-himax-hx8394.ko",
    "sound/soc/codecs/snd-soc-rk817.ko",
    "drivers/pinctrl/pinctrl-rk805.ko",
    "drivers/video/backlight/led_bl.ko",
    "sound/soc/rockchip/snd-soc-rockchip-i2s-tdm.ko",
    "drivers/cpufreq/cpufreq-dt-platdev.ko",
    "drivers/clk/clk-rk808.ko",
    "drivers/mmc/host/dw_mmc-rockchip.ko",
#    "drivers/net/wireless/realtek/rtw88/rtw88_sdio.ko",
    "sound/soc/codecs/snd-soc-es8328.ko",
    "drivers/net/usb/lan78xx.ko",
    "drivers/rtc/rtc-rk808.ko",
    "drivers/gpu/drm/drm_dma_helper.ko",
    "drivers/mfd/rk8xx-i2c.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-hdmi-i2s-audio.ko",
    "drivers/iio/buffer/kfifo_buf.ko",
    "drivers/tee/tee.ko",
    "drivers/regulator/fan53555.ko",
    "sound/soc/codecs/snd-soc-hdmi-codec.ko",
    "drivers/gpu/drm/bridge/synopsys/dw-mipi-dsi.ko",
    "drivers/gpu/drm/panel/panel-magnachip-d53e6ea8966.ko",
    "drivers/input/touchscreen/goodix_ts.ko",
    "sound/soc/generic/snd-soc-simple-card.ko",
    "drivers/iio/buffer/industrialio-triggered-buffer.ko",
    "drivers/thermal/rockchip_thermal.ko",
    "drivers/i2c/busses/i2c-rk3x.ko",
    "drivers/input/touchscreen/hynitron_cstxxx.ko",
    "drivers/nvmem/nvmem_rockchip_efuse.ko",
    "drivers/media/v4l2-core/v4l2-h264.ko",
    "drivers/mmc/host/dw_mmc-pltfm.ko",
    "drivers/media/v4l2-core/v4l2-vp9.ko",
    "drivers/pwm/pwm-rockchip.ko",
    "drivers/phy/rockchip/phy-rockchip-inno-csidphy.ko",
    "sound/soc/codecs/snd-soc-es8328-spi.ko",
    "drivers/soc/rockchip/io-domain.ko",
    "drivers/gpu/drm/drm_mipi_dbi.ko",
    "drivers/iio/adc/rockchip_saradc.ko",
    "drivers/net/phy/microchip.ko",
    "drivers/net/phy/smsc.ko",
    "drivers/spi/spi-rockchip-sfc.ko",
    "drivers/leds/leds-pwm.ko",
    "drivers/regulator/rk808-regulator.ko",
    "drivers/net/usb/dm9601.ko",
    "drivers/video/backlight/pwm_bl.ko",
    "drivers/usb/host/ohci-hcd.ko",
    "drivers/net/usb/smsc75xx.ko",
    "drivers/mfd/rk8xx-core.ko",
    "drivers/mmc/host/sdhci-of-arasan.ko",
    "drivers/phy/rockchip/phy-rockchip-usb.ko",
    "sound/soc/rockchip/snd-soc-rockchip-spdif.ko",
    "drivers/nvdimm/of_pmem.ko",
    "drivers/mfd/rk8xx-spi.ko",
    "drivers/input/joystick/adc-joystick.ko",
    "drivers/mmc/host/sdhci-of-dwcmshc.ko",
    "drivers/regulator/gpio-regulator.ko",
    "drivers/gpu/drm/panel/panel-sitronix-st7703.ko",
    "drivers/gpu/drm/panel/panel-sitronix-st7701.ko",
    "drivers/gpu/drm/scheduler/gpu-sched.ko",
    "drivers/power/supply/rk817_charger.ko",
    "sound/soc/rockchip/snd-soc-rockchip-i2s.ko",
    "drivers/gpu/drm/rockchip/rockchipdrm.ko",
    "drivers/mmc/host/dw_mmc.ko",
    "drivers/gpu/drm/panfrost/panfrost.ko",
    "sound/soc/codecs/snd-soc-es8328-i2c.ko",
    "drivers/watchdog/dw_wdt.ko",
    "drivers/usb/host/ohci-platform.ko",
    "drivers/staging/media/rkvdec/rockchip-vdec.ko",
    "sound/soc/rockchip/snd-soc-rk3288-hdmi-analog.ko",
    "drivers/phy/rockchip/phy-rockchip-naneng-combphy.ko",
    "drivers/leds/leds-gpio.ko",
    "drivers/net/usb/smsc95xx.ko",
    "sound/soc/generic/snd-soc-audio-graph-card.ko",
    "drivers/phy/rockchip/phy-rockchip-inno-dsidphy.ko",
    "drivers/dma/pl330.ko",
    "drivers/nvmem/nvmem-rockchip-otp.ko",
    "drivers/phy/rockchip/phy-rockchip-inno-hdmi.ko",
    "drivers/mmc/host/cqhci.ko",
    "drivers/iio/buffer/industrialio-buffer-cb.ko",
#    "drivers/net/wireless/realtek/rtw88/rtw88_8821cs.ko",
]

kernel_build(
    name = "rgxx3",
    srcs = glob(
        ["**"],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/BUILD.bazel",
            "**/*.bzl",
        ],
    ) + ["//common:kernel_aarch64_sources"],
    outs = [
        "Image",
	"Image.lz4",
	"System.map",
        "modules.builtin",
        "modules.builtin.modinfo",
        "arch/arm64/boot/dts/rockchip/rk3566-anbernic-rg353p.dtb",
	"arch/arm64/boot/dts/rockchip/rk3566-anbernic-rg353v.dtb",
        "vmlinux",
        "vmlinux.symvers",
    ],
    build_config = "//rgxx3:build.config.rgxx3",
    make_goals = [
        "Image",
	"Image.lz4",
	"modules",
	"rockchip/rk3566-anbernic-rg353p.dtb",
	"rockchip/rk3566-anbernic-rg353v.dtb",
    ],
    module_outs = get_gki_modules_list("arm64") + _RGXX3_MODULE_OUTS,
    visibility = ["//visibility:private"],
    strip_modules = True,
)

kernel_modules_install(
    name = "rgxx3_modules_install",
    kernel_build = "//rgxx3:rgxx3",
)

kernel_images(
    name = "rgxx3_images",
    kernel_build = "//rgxx3:rgxx3",
    kernel_modules_install = "//rgxx3:rgxx3_modules_install",
)

copy_to_dist_dir(
    name = "rgxx3_dist",
    data = [
        ":rgxx3",
        ":rgxx3_images",
        ":rgxx3_modules_install",
    ],
    dist_dir = "out/rgxx3/dist",
    flat = True,
)
